--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@
 <body>
     <div class="container">
         <div class="left-column">
-            <h1>PALIGSAHAN 2024 - DP BLAST</h1>
+            <h1>PALIGSAHAN 2025 - DP BLAST</h1>
             <div class="form-group">
                 <label for="role">Select Your Delegation:</label>
                 <select id="role">
-                    <option value="7">Grade 7 - HERACLES</option>
-                    <option value="8">Grade 8 - SENTINELS</option>
-                    <option value="9">Grade 9 - SPARTANS</option>
-                    <option value="10">Grade 10 - LA DECIMA PHOENIX</option>
-                    <option value="11">Grade 11 - PURPURA VANGUARDS</option>
-                    <option value="12">Grade 12 - MAROON SAMURAI</option>
+                    <option value="7">Grade 7 - LUMINESCENT ELIXER</option>
+                    <option value="8">Grade 8 - FIERY SENTINELS</option>
+                    <option value="9">Grade 9 - BLUE FLAME EMBER</option>
+                    <option value="10">Grade 10 - BLAZING PHOENIX</option>
+                    <option value="11">Grade 11 - MYSTICAL AURA</option>
+                    <option value="12">Grade 12 - COSMIC STELLARS</option>
                 </select>
             </div>
             <div class="form-group">
@@ -206,7 +206,7 @@
             </div>
         </div>
     </div>
-    <p>Created by: Robert Aaron A. Mantac<br>8/29/2024</p>
+    <p>Portal by: Robert Aaron A. Mantac<br>8/29/2024</p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
     <script>
@@ -227,12 +227,12 @@
     
         const framePaths = {
             frame: {
-                '7': 'images/GRADE 7.png',
-                '8': 'images/GRADE 8.png',
-                '9': 'images/GRADE 9.png',
-                '10': 'images/GRADE 10.png',
-                '11': 'images/GRADE 11.png',
-                '12': 'images/GRADE 12.png'
+                '7': 'images/GRADE 7b.png',
+                '8': 'images/GRADE 8b.png',
+                '9': 'images/GRADE 9b.png',
+                '10': 'images/GRADE 10b.png',
+                '11': 'images/GRADE 11b.png',
+                '12': 'images/GRADE 12b.png'
             }
         };
     
@@ -313,3 +313,4 @@
     </script>    
 </body>
 </html>
+
