--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                     <option value="10">Grade 10 - BLAZING PHOENIX</option>
                     <option value="11">Grade 11 - MYSTICAL AURA</option>
                     <option value="12">Grade 12 - COSMIC STELLARS</option>
+                    <option value="13">Editorial Board - Ang Kingke</option>
                 </select>
             </div>
             <div class="form-group">
@@ -227,12 +228,13 @@
     
         const framePaths = {
             frame: {
-                '7': 'images/GRADE 7b.png',
-                '8': 'images/GRADE 8b.png',
-                '9': 'images/GRADE 9b.png',
-                '10': 'images/GRADE 10b.png',
-                '11': 'images/GRADE 11b.png',
-                '12': 'images/GRADE 12b.png'
+                '7': 'images/GRADE 7.png',
+                '8': 'images/GRADE 8.png',
+                '9': 'images/GRADE 9.png',
+                '10': 'images/GRADE 10.png',
+                '11': 'images/GRADE 11.png',
+                '12': 'images/GRADE 12.png',
+                '13': 'images/1C6022F1-0BEA-41CE-A820-3E9886FEF985.png'
             }
         };
     
@@ -313,4 +315,5 @@
     </script>    
 </body>
 </html>
+
 
